unpackaged/main/default/objects/Help_Guide_Option__mdt/Help_Guide_Option__mdt.object-meta.xml
<CustomObject>
    <label>Help Guide Option</label>
    <pluralLabel>Help Guide Options</pluralLabel>
</CustomObject>