unpackaged/main/default/objects/Help_Guide_Option__mdt/fields/Node__c.field-meta.xml
<CustomField>
    <fullName>Node__c</fullName>
    <label>Node</label>
    <referenceTo>Help_Guide_Node__mdt</referenceTo>
    <relationshipLabel>Help Guide Options</relationshipLabel>
    <relationshipName>Help_Guide_Options</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>