unpackaged/main/default/objects/Help_Guide_Option__mdt/fields/Target_Type__c.field-meta.xml
<CustomField>
    <fullName>Target_Type__c</fullName>
    <label>Target Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>node</fullName>
                <default>true</default>
                <label>node</label>
            </value>
            <value>
                <fullName>category</fullName>
            </value>
            <value>
                <fullName>article</fullName>
            </value>
            <value>
                <fullName>resource</fullName>
            </value>
            <value>
                <fullName>case</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>