unpackaged/main/default/objects/Help_Guide_Option__mdt/fields/Target_Value__c.field-meta.xml
<CustomField>
    <fullName>Target_Value__c</fullName>
    <description>Meaning depends on Target_Type__c: node -&gt; next node&#39;s Node_Key__c; category -&gt; category slug; article -&gt; Knowledge UrlName; resource -&gt; resource slug; case -&gt; optional case reason/prefill.</description>
    <label>Target Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>